<resources>
    <string name="app_name">My Movie</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_new_account">New Account</string>
    <string name="button_login">Login</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="header_new_user">New User</string>
    <string name="label_name">Name</string>
    <string name="label_phone">Phone</string>
    <string name="button_new_account">New Account</string>
    <string name="Signup">Signup</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Movie</string>
    <string name="nav_header_subtitle">Your movies in one place</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_new_movie">New Movie</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_all_movies">All Movies</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_about">About</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_system">System</string>
    <string name="title_information">Information</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_code_qr">Read the QR Code to access the movie</string>
    <string name="obs_code_qr">Position the camera in front of the code.</string>
    <string name="text_loading">Loading</string>
    <string name="Update">Update</string>
    <string name="Add">Add</string>
    <string name="movie_added">Movie added!</string>
    <string name="item_not_found">Item not found!</string>
    <string name="field_must_be_completed">Field must be completed.</string>
    <string name="is_required">is required</string>
    <string name="movie_category">Movie category</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_description">Movie description</string>
    <string name="movie_plataform_watching">Movie platform watching</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="signup_success">Signup success!</string>
    <string name="new_movie">New movie</string>
    <string name="edit_movie">Edit movie</string>
    <string name="movie_saved">Movie saved!</string>
    <string name="movie_was_removed">Movie was removed!</string>
    <string name="undo">UNDO</string>
    <string name="fiap_phone_call">FIAP Phone Call</string>
    <string name="i_watched">I watched?</string>
    <string name="send_to">Send To</string>
    <string name="share_msg">Hi, I watched {name} and rated it at {rating} \\n\\nDescription: {description}</string>
    <string name="open_nearby_theaters">Open Nearby Theaters</string>
</resources>
