<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_new_movie"
                android:icon="@drawable/ic_add_movie"
                android:title="@string/menu_new_movie" />
        <item
                android:id="@+id/nav_maps"
                android:icon="@drawable/ic_map"
                android:title="@string/menu_maps" />
        <item
                android:id="@+id/nav_all_movies"
                android:icon="@drawable/ic_list_movie"
                android:title="@string/menu_all_movies" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
        <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_power"
                android:title="@string/menu_exit" />
    </group>

</menu>
