<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="br.com.fiap.androidfinalprojeto.view.main.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_new_movie"
            android:name="br.com.fiap.androidfinalprojeto.view.main.ui.newMovie.NewMovieFragment"
            android:label="@string/menu_new_movie"
    />

    <fragment
            android:id="@+id/nav_maps"
            android:name="br.com.fiap.androidfinalprojeto.view.main.ui.maps.MapsFragment"
            android:label="@string/menu_maps"
            tools:layout="@layout/fragment_maps" />

    <fragment
            android:id="@+id/nav_all_movies"
            android:name="br.com.fiap.androidfinalprojeto.view.main.ui.all_movie.AllMoviesFragment"
            android:label="@string/menu_all_movies"
            tools:layout="@layout/fragment_all_movies" />

    <fragment
            android:id="@+id/nav_about"
            android:name="br.com.fiap.androidfinalprojeto.view.main.ui.about.AboutFragment"
            android:label="@string/menu_about"
            tools:layout="@layout/fragment_about" />
    <fragment android:id="@+id/nav_sair"
              android:name="br.com.fiap.androidfinalprojeto.view.main.ui.exit.ExitFragment"
              android:label="ExitFragment"/>

</navigation>