<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="56dp"
                android:paddingRight="24dp">

            <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/lock" />

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_email"
                        android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_password"
                        android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btLogin"
                    style="@style/CustomButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/button_login" />

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btSignup"
                    style="@style/CustomButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/button_new_account" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>